
export const mainPanelStates = [
  'Buy',
  'Sell',
  'Trade',
  'Assets',
  'Home',
  'CryptoContent',
  'Explore',
  'Diagnostics',
  'ThemeDemo',
  'Transfer',

  'History',
  'Send',
  'Receive',
  'Notifications',
  'Settings',
  'Test',
  'Login',
  'PIN',
  'ChooseHowToPay',
  'MakePayment',
  'WaitingForPayment',
  'PaymentNotMade',
  'PurchaseSuccessful',
  'InsufficientBalance',
  'ReadArticle',
  'ChooseHowToReceivePayment',
  'RequestTimeout',
  'SaleSuccessful',
  'PersonalDetails',
  'ContactUs',
  'BankAccounts',
  'Security',
  'RequestFailed',
  'Error',
  'Maintenance',
  'SendSuccessful',
  'Authenticate',
  // 'BiometricAuth', // Removed - now handled by SecureApp wrapper
  'Register',
  'RegistrationCompletion',
  'EmailVerification',
  'PhoneVerification',
  'SupportTools',
  'LimitsExceeded',
  'IdentityVerification',
  'ResetPassword',
  'MakePaymentOpenBanking',
  'SolidiAccount',
  'Terms',
  'CloseSolidiAccount',
  'UpdateApp',
  'RegisterConfirm',
  'RegisterConfirm2',
  'AccountUpdate',
  'AccountRestricted',
  'NavigationDebug',
  'AccountReview',
  'SelfCategorisation',
  'Questionnaire',
  'AddressBook',
  'Wallet',
  'DepositInstructions',
  'RiskSummary',
];

export default mainPanelStates;
