// These buttons select the different panels to show in the main section.
let footerButtonList = [
  'Trade',
  'Assets',
  'Wallet',
  'Explore',
  'Transfer',
];

export default footerButtonList;

