...
            "required": true,
            "validation": "minLength:2"
          },
          {
            "id": "email",
            "type": "email",
            "label": "Email Address",
            "required": true,
            "validation": "email"
          },
          {
            "id": "userType",
            "type": "radio",
...
